@startuml Class Diagram - Services
!theme plain
skinparam backgroundColor #FEFEFE
skinparam classAttributeIconSize 0

title Service Layer Class Diagram

interface IDocumentService {
    + RequestUploadAsync(userId, request): Task<RequestDocumentUploadResponse>
    + CompleteUploadAsync(userId, attachmentId): Task
    + GetDocumentStatusAsync(userId, attachmentId): Task<DocumentStatusResponse>
    + GetGroupDocumentsAsync(userId, groupId): Task<GroupDocumentsResponse>
    + DeleteDocumentAsync(userId, attachmentId): Task
}

class DocumentService {
    - _attachmentRepository: IGroupAttachmentRepository
    - _groupParticipantRepository: IGroupParticipantRepository
    - _fileStorageService: IFileStorageService
    - _embeddingService: IEmbeddingService
    - _vectorDbService: IVectorDatabaseService
    - _userRepository: IUserRepository
    - _logger: ILogger
    --
    + RequestUploadAsync(): Task<RequestDocumentUploadResponse>
    + CompleteUploadAsync(): Task
    - ProcessDocumentAsync(): Task (Background)
    - ExtractTextAsync(): Task<string>
    - ChunkText(): List<string>
    + GetDocumentStatusAsync(): Task<DocumentStatusResponse>
    + GetGroupDocumentsAsync(): Task<GroupDocumentsResponse>
    + DeleteDocumentAsync(): Task
}

interface IAIService {
    + AskQuestionAsync(userId, request): Task<AIAnswerResponse>
}

class AIService {
    - _embeddingService: IEmbeddingService
    - _vectorDbService: IVectorDatabaseService
    - _llmService: ILLMService
    - _taskRepository: ITaskRepository
    - _groupParticipantRepository: IGroupParticipantRepository
    - _logger: ILogger
    --
    + AskQuestionAsync(): Task<AIAnswerResponse>
    - BuildContextAsync(): Task<string>
    - GetTaskSummaryAsync(): Task<TaskSummaryResponse>
}

interface ILLMService {
    + GenerateAnswerAsync(systemPrompt, userQuestion, context): Task<string>
}

class GroqLLMService {
    - _config: GroqConfig
    - _httpClient: HttpClient
    - _logger: ILogger
    --
    + GenerateAnswerAsync(): Task<string>
}

interface IEmbeddingService {
    + GenerateEmbeddingAsync(text): Task<float[]>
    + GenerateBatchEmbeddingsAsync(texts): Task<List<float[]>>
}

class GeminiEmbeddingService {
    - _config: GeminiConfig
    - _httpClient: HttpClient
    - _logger: ILogger
    --
    + GenerateEmbeddingAsync(): Task<float[]>
    + GenerateBatchEmbeddingsAsync(): Task<List<float[]>>
}

interface IVectorDatabaseService {
    + UpsertVectorAsync(id, vector, payload): Task<bool>
    + SearchVectorsAsync(queryVector, topK, groupId): Task<List<SearchResult>>
    + DeleteVectorAsync(id): Task<bool>
    + DeleteVectorsByFilterAsync(filters): Task<bool>
}

class QdrantService {
    - _config: QdrantConfig
    - _httpClient: HttpClient
    - _logger: ILogger
    --
    + UpsertVectorAsync(): Task<bool>
    + SearchSimilarAsync(): Task<List<VectorSearchResult>>
    + SearchVectorsAsync(): Task<List<SearchResult>>
    + DeleteVectorAsync(): Task<bool>
    + DeleteVectorsByFilterAsync(): Task<bool>
}

interface IFileStorageService {
    + GeneratePresignedUploadUrlAsync(key, expirationMinutes): Task<string>
    + GeneratePresignedDownloadUrlAsync(key, expirationMinutes): Task<string>
    + DeleteFileAsync(key): Task<bool>
    + FileExistsAsync(key): Task<bool>
    + DownloadFileAsync(key): Task<Stream>
}

class BackblazeStorageService {
    - _config: BackblazeConfig
    - _s3Client: AmazonS3Client
    - _logger: ILogger
    --
    + GeneratePresignedUploadUrlAsync(): Task<string>
    + GeneratePresignedDownloadUrlAsync(): Task<string>
    + DeleteFileAsync(): Task<bool>
    + FileExistsAsync(): Task<bool>
    + DownloadFileAsync(): Task<Stream>
}

' Implement relationships
IDocumentService <|.. DocumentService
IAIService <|.. AIService
ILLMService <|.. GroqLLMService
IEmbeddingService <|.. GeminiEmbeddingService
IVectorDatabaseService <|.. QdrantService
IFileStorageService <|.. BackblazeStorageService

' Dependencies
DocumentService --> IFileStorageService
DocumentService --> IEmbeddingService
DocumentService --> IVectorDatabaseService
DocumentService --> IGroupAttachmentRepository
DocumentService --> IGroupParticipantRepository
DocumentService --> IUserRepository

AIService --> IEmbeddingService
AIService --> IVectorDatabaseService
AIService --> ILLMService
AIService --> ITaskRepository
AIService --> IGroupParticipantRepository

GroqLLMService --> GroqConfig
GeminiEmbeddingService --> GeminiConfig
QdrantService --> QdrantConfig
BackblazeStorageService --> BackblazeConfig

note right of DocumentService
**Key Methods:**
- RequestUploadAsync: Generate presigned URL
- CompleteUploadAsync: Verify & trigger processing
- ProcessDocumentAsync: Background job
  ? Extract text
  ? Chunk
  ? Embed
  ? Store in Qdrant
end note

note right of AIService
**Hybrid RAG:**
Combines:
1. Document vectors (Qdrant)
2. Task statistics (PostgreSQL)
3. LLM generation (Groq)
end note

@enduml
